<resources>
    <string name="app_name">Birraviso</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="btn_add_beer">Agregar Cerveza</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="cancel">CANCELAR</string>

    <string name="namebeer">Nombre</string>
    <string name="trademark">Marca</string>
    <string name="style">Estilo</string>
    <string name="ibu">IBU</string>
    <string name="alcohol">% de Alcohol</string>
    <string name="srm">SRM</string>
    <string name="description">Descripcion</string>
    <string name="others">Detalles Adicionales</string>
    <string name="contact">Contacto</string>
    <string name="hbBeerList">CLICK ACÁ PARA VER SU LISTADO DE CERVEZAS</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
</resources>
