<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:background="@drawable/background"
                  android:gravity="center"
                  android:orientation="vertical"
                  android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            android:weightSum="1">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/contact_layout"
                android:theme="@style/EditTextHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/contact"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.22"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/contact"
                    android:inputType="textCapSentences"
                    android:padding="10dp"
                    android:paddingTop="@dimen/floating_hint_margin"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/white"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/contact_whatsapp_layout"
                android:theme="@style/EditTextHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/contact_whatsapp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.22"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/description"
                    android:inputType="textCapSentences"
                    android:padding="10dp"
                    android:paddingTop="@dimen/floating_hint_margin"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/white"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/contact_email_layout"
                android:theme="@style/EditTextHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/contact_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.22"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/description"
                    android:inputType="textCapSentences"
                    android:padding="10dp"
                    android:paddingTop="@dimen/floating_hint_margin"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/white"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/contact_facebook_layout"
                android:theme="@style/EditTextHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/contact_facebook"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.22"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/description"
                    android:inputType="textCapSentences"
                    android:padding="10dp"
                    android:paddingTop="@dimen/floating_hint_margin"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/white"/>
            </android.support.design.widget.TextInputLayout>

            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                      android:id="@+id/map"
                      android:name="com.google.android.gms.maps.SupportMapFragment"
                      android:layout_width="match_parent"
                      android:layout_height="300dp"
                       />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnAddUpdateBeer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/btn_login_bg"
                android:text="@string/btn_add_beer"
                android:textColor="@color/btn_login"/>

            <!-- Cancel and return to main menu -->

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/btn_login_bg"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/btn_logut_bg"
                android:textSize="15dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>